[tool.poetry]
name = "my-vpn-backend"
version = "0.1.0"
description = ""
authors = ["Artem Kolesnik <steeltouch27@gmail.com>"]
readme = "README.md"
packages = [{include = "my-vpn-backend"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.101.1"
uvicorn = "^0.23.2"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
